# alethic-reasoning-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  SETUP.md  agent.py  celery_app.py  celery_config.py  docker-compose.dev.yml  docker-compose.prod.yml  examples_celery.py  main.py  pyproject.toml  pytest.ini  setup_auth.sh  test.sh  worker.py
agents/: __init__.py  base.py  registry.py  resume.py
agents/chat/: tools_complete.py
agents/common/: _validators.py  prompts.py  tools.py  tools_extended.py  utils.py  utils_extended.py
agents/email/: tools.py
agents/evaluation/: agent.py  prompts.py  tools.py  tools_complete.py
agents/resume/: agent.py  prompts.py  tools.py  tools_complete.py
agents/screening/: agent.py  prompts.py  tools.py  tools_complete.py
agents/tools/: __init__.py  adk.py  applications.py  background_checks.py  bulk.py  calendar.py  candidates.py  communications.py  comparison.py  compliance.py  documents.py  evaluations.py  interviews.py  jobs.py  queue.py  search.py
alembic/: env.py
alembic/versions/: 001_add_beta_registrations.py
api/: dependencies.py  main.py
api/routes/: health.py
api/schemas/: agents.py  beta.py  candidates.py  common.py
api/services/: __init__.py  applications.py  background_checks.py  bulk.py  calendar.py  candidates.py  communications.py  comparison.py  compliance.py  documents.py  evaluations.py  interviews.py  jobs.py  offers.py  search.py  users.py  webhooks.py
core/: __init__.py  cache.py  config.py  security.py
core/integrations/: calendar.py  email.py  zoom.py
core/middleware/: .env.template  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  QUICKSTART.md  README.md  __init__.py  authentication.py  authorization.py  error_handling.py  example_integration.py  logging.py  rate_limiting.py
core/storage/: local.py  s3.py
core/utils/: datetime.py  formatting.py  validators.py
database/: README.md  __init__.py  engine.py  gg.py  relationships.py  security.py
database/models/: __init__.py  ai_assessments_ext.py  ai_evaluations.py  applications.py  assessments.py  audit.py  background_checks.py  beta_registrations.py  calendar.py  (+22 more)
docs/: AGENT_TOOLS.md  ARCHITECTURE.md  ARCHITECTURE_VISUAL.md  AUTH.md  BETA_REGISTRATION.md  DOCKER.md  FOLDER_STRUCTURE.md  MIDDLEWARE_GUIDE.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  TYPE_SAFETY.md  database.md
infra/: Dockerfile  Dockerfile.prod  Dockerfile.worker  Dockerfile.worker.prod  docker-compose.dev.yml  docker-compose.prod.yml
jobs/: documents.py  s3.py
lib/: db.py  document_parser.py  s3.py
tests/: __init__.py  conftest.py  test_document_parser.py  test_s3.py
workers/: celery_app.py  celery_config.py  examples_celery.py
(+62 files in other folders)
