[project]
name = "ane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=13.2.1",
    "asyncpg>=0.31.0",
    "celery>=5.3.0",
    "fastapi>=0.115.0",
    "google-adk>=1.21.0",
    "litellm>=1.80.10",
    "pdfplumber>=0.11.8",
    "pgvector>=0.4.2",
    "python-docx>=1.2.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.32.0",
    "watchdog>=5.0.0",
    "pyjwt[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "workos>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "moto>=5.1.19",
    "pytest>=9.0.2",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "watchdog[watchmedo]>=5.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.2.0",
    "httpx>=0.27.0",
    "moto>=5.0.0",
]

[tool.pytest.ini_options]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]
env = [
    "DATABASE_URL=postgresql+asyncpg://test:test@localhost:5432/test_db",
    "REDIS_URL=redis://localhost:6379/0",
    "CELERY_BROKER_URL=redis://localhost:6379/1",
    "CELERY_RESULT_BACKEND=redis://localhost:6379/2",
    "AWS_ACCESS_KEY_ID=testing",
    "AWS_SECRET_ACCESS_KEY=testing",
    "AWS_REGION=us-east-1",
    "AWS_S3_BUCKET=test-bucket",
    "GOOGLE_API_KEY=test-google-key",
    "JWT_SECRET_KEY=test-jwt-secret-key-min-32-chars-long-for-security",
    "JWT_ALGORITHM=HS256",
    "ACCESS_TOKEN_EXPIRE_MINUTES=60",
    "REFRESH_TOKEN_EXPIRE_DAYS=30",
    "WORKOS_API_KEY=sk_test_workos_key",
    "WORKOS_CLIENT_ID=client_test_workos",
    "WORKOS_REDIRECT_URI=http://localhost:8000/api/v1/auth/sso/callback",
    "HASH_SALT=test-hash-salt-32-chars-long-min",
]

[dependency-groups]
test = [
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.2.0",
]
